--- a/src/styles/TodoList.module.css
+++ b/src/styles/TodoList.module.css
@@ -1,8 +1,70 @@
 .container {
-    max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.input_group {
+  display:flex;
+  
+}
+
+input[type="text"].itemInput {
+  width: 400px;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+input[type="date"].dateInput {
+  width: 200px;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+
+button.addButton {
+  padding: 5px;
+  background-color: #0070f3;
+  color: white;
+  border: 1px solid #0070f3;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button.addButton:hover {
+  background-color: #fff;
+  color: #0070f3;
+}
+
+button.modiButton {
+  padding: 5px;
+  background-color: #00af0f;
+  color: white;
+  border: 1px solid #00af0f;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button.modiButton:hover {
+  background-color: #fff;
+  color: #00af0f;
+}
+
+.todoItem {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.todoText {
+  margin-left: 10px;
+  flex-grow: 1;
+}
+
+.todoDate {
+  margin-left: 10px;
+  margin-right: 10px;
+}
